bugfix uncaught...
uncaught error in text in header logo - width 50% on desktop
menu2 z-index too low after update

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -316,6 +316,7 @@ header {
 
   #about1 {
     padding-top: 6rem;
+    width: 100%;
   }
 
   #about1 > div {
